@@ -52,6 +52,8 @@ Version 8b
 
 --Improved enemy aiming when there's no straight-line path to player.
 
+--Path to rise marker hint shown if player stands still for 2 seconds.
+
 
 
 Version 8   2011-February-4
